<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="all">
    <string name="app_name">VagaInclusiva</string>
    <string name="access_token">pk.eyJ1IjoiZ3J1cG8xa2FyaSIsImEiOiJjbGczNXF0OHYwMXpvM2pudjd5MG5veDNwIn0.6VP-RBPmmplGkJ15pEmqXg</string>
    <string name="tela_mapa_nao_avaliado">Não avaliado</string>
    <string name="tela_mapa_bom">Bom</string>
    <string name="tela_mapa_ruim">Ruim</string>
    <string name="tela_mapa_faca_seu_login_ou_cadastrese">Faça login ou cadastre-se</string>
    <string name="tela_mapa_entrar">Entrar</string>
    <string name="tela_mapa_cadastrar">Cadastrar</string>
    <string name="tela_geolocalizacao_permitir">Permitir</string>
    <string name="tela_geolocalizacao_mensagem">Olá, visitante! Para acessar o aplicativo VagaInclusiva, é necessário que você esteja conectado à internet e permita a função de geolocalização no seu dispositivo Android.</string>
    <string name="tela_telefone_permitir">Permitir</string>
    <string name="tela_telefone_mensagem">Olá, visitante! Para acessar o aplicativo VagaInclusiva, é necessário que você esteja conectado à internet e permita a função de acessar o estado do telefone no seu dispositivo Android.</string>
    <string name="tela_conexao_internet_tentar_novamente">Tentar Novamente</string>
    <string name="tela_conexao_internet_mensagem">Olá, visitante! Para acessar o aplicativo VagaInclusiva, é necessário que você esteja conectado à internet.</string>
    <string name="tela_cadastro_cadastrar">CADASTRAR</string>
    <string name="tela_cadastro_email_hint">Email</string>
    <string name="tela_cadastro_senha_hint">Senha</string>
    <string name="tela_cadastro_google">Entre com sua conta google</string>
    <string name="tela_cadastro_cadastrese">Cadastre-se</string>
    <string name="tela_cadastro_login">LOGIN</string>
    <string name="tela_cadastro_usuario_hint">Nome de usuário</string>
    <string name="tela_cadastro_confirmar_senha_hint">Confirmar senha</string>
    <string name="tela_cadastro_cadastrar_btn">CADASTRAR</string>
    <string name="tela_login_google">Entre com sua conta google</string>
    <string name="tela_login_faca_login">Faça Login</string>
    <string name="tela_login_login">LOGIN</string>
    <string name="tela_login_cadastrar">CADASTRAR</string>
    <string name="tela_login_email_hint">Email</string>
    <string name="tela_login_senha_hint">Senha</string>
    <string name="tela_login_entrar">ENTRAR</string>
    <string name="tela_login_esqueci_senha">Esqueci minha senha</string>
    <string name="tela_perfil_altere_seu_perfil">Altere seu perfil</string>
    <string name="tela_perfil_nome_de_usuario">Nome de Usuário</string>
    <string name="tela_perfil_email">Email</string>
    <string name="tela_perfil_criacao_da_conta">Criação da Conta</string>
    <string name="tela_perfil_altere_dados_do_perfil">Altere dados do perfil</string>
    <string name="tela_perfil_tema">Tema</string>
    <string name="tela_perfil_idioma">Idioma</string>
    <string name="tela_perfil_excluir_conta">Deseja excluir sua conta?</string>
    <string name="tela_perfil_fazer_logout">Fazer Logout</string>
    <string name="tela_alterar_dados_perfil_alterar_dados_do_seu_perfil">Alterar dados do seu perfil</string>
    <string name="tela_alterar_dados_perfil_hint_email_atual">E-mail atual</string>
    <string name="tela_alterar_dados_perfil_hint_novo_email">Novo e-mail</string>
    <string name="tela_alterar_dados_perfil_atualizar_email">atualizar e-mail</string>
    <string name="tela_alterar_dados_perfil_hint_senha_atual">Senha atual</string>
    <string name="tela_alterar_dados_perfil_hint_nova_senha">Nova senha</string>
    <string name="tela_alterar_dados_perfil_atualizar_senha">atualizar senha</string>
    <string name="tela_alterar_senha_email_alteracao_de_senha">Alteração de Senha</string>
    <string name="tela_alterar_senha_email_hint_email">Digite seu e-mail</string>
    <string name="tela_alterar_senha_email_enviar_email">Enviar e-mail</string>
    <string name="tela_alterar_senha_email_titulo">Por que é necessário enviar o meu e-mail?</string>
    <string name="tela_alterar_senha_email_mensagem">Ao enviar o seu e-mail com o qual você cadastrou uma conta podemos verificar se ela pertence a uma conta existente, e em seguida enviar o token de autenticação para mudança da senha.</string>
    <string name="tela_avaliacao_formulario_dados_da_vaga">Dados da vaga</string>
    <string name="tela_avaliacao_formulario_media">Média</string>
    <string name="tela_avaliacao_formulario_acessibilidade">Acessibilidade</string>
    <string name="tela_avaliacao_formulario_avalie_essa_vaga">Avalie essa vaga</string>
    <string name="tela_avaliacao_formulario_nota">Nota</string>
    <string name="tela_avaliacao_formulario_tipos_acessibilidade">Tipos de Acessibilidade</string>
    <string name="tela_avaliacao_formulario_calcadas_niveladas">Calçadas Niveladas</string>
    <string name="tela_avaliacao_formulario_recuo_direito">Recuo para cadeira lado Direito</string>
    <string name="tela_avaliacao_formulario_recuo_esquerdo">Recuo para cadeira lado Esquerdo</string>
    <string name="tela_avaliacao_formulario_recuo_cadeira_traseira">Recuo para cadeira Traseira</string>
    <string name="tela_avaliacao_formulario_trafego">Tráfego local com menor Intensidade</string>
    <string name="tela_avaliacao_formulario_calcadas_largas">Calçadas Largas</string>
    <string name="tela_avaliacao_formulario_guia_rebaixada">Guia Rebaixada</string>
    <string name="tela_avaliacao_formulario_piso_tatil">Piso Tátil</string>
    <string name="tela_avaliacao_formulario_outro">Outro</string>
    <string name="tela_avaliacao_formulario_hint_comentario">Escreva seu comentário na avaliação ...</string>
    <string name="tela_avaliacao_formulario_comentario">Comentário</string>
    <string name="tela_avaliacao_formulario_avaliacao">ENVIAR AVALIAÇÃO</string>
    <string name="tela_comentario_avaliacao_comentario_da_vaga">Comentários da vaga</string>
    <string name="tela_comentario_avaliacao_avaliacao">Veja Comentários</string>
    <string name="tela_comentario_avaliacao_responder">Responder</string>
    <string name="tela_comentario_formulario_titulo">"Comente na avaliação de "</string>
    <string name="tela_comentario_formulario_comentario">Comentário</string>
    <string name="tela_comentario_formulario_hint">Escreva seu comentário na avaliação ...</string>
    <string name="tela_comentario_formulario_enviar_comentario">enviar comentário</string>
    <string name="tela_comentario_individual_titulo">Comentários da avaliação de</string>
    <string name="tela_comentario_individual_responder">Responder</string>
    <string name="tela_comentario_individual_sem_avaliacao">Comentário sem avalição</string>
    <string name="tela_esqueci_senha_titulo">Altere sua senha</string>
    <string name="tela_esqueci_senha_nova_senha">Nova senha</string>
    <string name="tela_esqueci_senha_confirmar_senha">Confirmar senha</string>
    <string name="tela_esqueci_senha_senha_btn">atualizar senha</string>
    <string name="tela_filtro_filtro_salvo">Filtro salvo</string>
    <string name="tela_filtro_nao_filtros">Ainda não há filtros salvos...</string>
    <string name="tela_filtro_tipo_acessibilidade">Filtre por tipo de acessibilidade</string>
    <string name="tela_filtro_calcadas_niveladas">Calçadas Niveladas</string>
    <string name="tela_filtro_recuo_cadeira_lado_direito">Recuo para cadeira lado Direito</string>
    <string name="tela_filtro_recuo_cadeira_lado_esquerdo">Recuo para cadeira lado Esquerdo</string>
    <string name="tela_filtro_recuo_cadeira_traseira">Recuo para cadeira Traseira</string>
    <string name="tela_filtro_trafego">Tráfego local com menor Intensidade</string>
    <string name="tela_filtro_calcadas_largas">Calçadas largas</string>
    <string name="tela_filtro_guia_rebaixada">Guia rebaixada</string>
    <string name="tela_filtro_piso_tatil">Piso tátil</string>
    <string name="tela_filtro_outro">Outro</string>
    <string name="tela_filtro_filtre_por_avaliacao">Filtre por avaliação</string>
    <string name="tela_filtro_nota">Nota</string>
    <string name="tela_filtro_btn_filtrar">Filtrar</string>
    <string name="tela_filtro_btn_salvar">Salvar</string>
    <string name="tela_footer_inicio">Início</string>
    <string name="tela_footer_perfil">Perfil</string>
    <string name="tela_footer_info">Info</string>
    <string name="tela_footer_filtro">Filtros</string>
    <string name="tela_info_faq">FAQ</string>
    <string name="tela_info_titulo1">O aplicativo é pago?</string>
    <string name="tela_info_resposta1">O aplicativo é distribuído de forma gratuita</string>
    <string name="tela_info_titulo2">Porque é necessário criar uma conta?</string>
    <string name="tela_info_resposta2">Para garantir a qualidade do aplicativo para que não haja nenhuma irregularidade de forma ofensiva nas avaliações, garantindo assim o controle do que é postado, e garantir que o usuario de sugestões.</string>
    <string name="tela_info_titulo3">Posso excluir minha conta?</string>
    <string name="tela_info_resposta3">Sim, a qualquer momento</string>
    <string name="tela_info_titulo4">Preciso estar logado par ver as vagas</string>
    <string name="tela_info_resposta4">Não, só é necessario estar logado para avaliar e ver avaliações</string>
    <string name="tela_info_titulo5">Posso alterar algum dado pessoal?</string>
    <string name="tela_info_resposta5">Sim, voce pode editar seu perfil a qualquer momento.</string>
    <string name="tela_info_titulo6">Como uso o aplicativo?</string>
    <string name="tela_info_resposta6">Voce pode visualizar vagas e seu indicador de qualidade sem estar logado, porém para ver sua avaliação e comentarios ou mesmo avaliar, selecionar os filtros e salvar os de sua preferencia, é necessário se cadastrar e se logar para efetuar ao mesmo.</string>
    <string name="tela_token_titulo">Alteração de Senha</string>
    <string name="tela_token_hint">Digite o Token</string>
    <string name="tela_token_btn">enviar token</string>
    <string name="tela_token_titulo1">Onde está o token?</string>
    <string name="tela_token_resposta1">O token foi enviado para o seu e-mail cadastrado na sua conta para que possamos autenticar o usuário e assim mudar a senha da sua conta, caso não encontre, confira a sua caixa de spam.</string>
    <string name="tela_token_cadastro_titulo">Validação de Email</string>
    <string name="tela_token_cadastro_hint">Digite o Token</string>
    <string name="tela_token_cadastro_btn">enviar token</string>
    <string name="tela_token_cadastro_titulo1">Onde está o token?</string>
    <string name="tela_token_cadastro_resposta1">O token foi enviado para o seu e-mail cadastrado na sua conta para que possamos autenticar o usuário e assim mudar a senha da sua conta, caso não encontre, confira a sua caixa de spam.</string>
    <string name="tela_vaga_individual_dados_da_vaga">Dados da vaga</string>
    <string name="tela_vaga_individual_media">Média</string>
    <string name="tela_vaga_individual_acessibilidade">Acessibilidade</string>
    <string name="tela_vaga_individual_avaliar_essa_vaga">Avaliar essa vaga</string>
    <string name="tela_vaga_individual_comentario_dessa_vaga">Comentários dessa Vaga</string>
    <string name="tela_vaga_individual_avaliacao">Veja comentários</string>
    <string name="tela_vaga_individual_responder">Responder</string>
    <string name="tela_vaga_individual_mais_comentarios">Veja mais comentários</string>
    <string name="tela_avaliacao_container_local">Local: </string>
    <string name="tela_avaliacao_container_proximidade">Proximidade: </string>
    <string name="tela_avaliacao_container_vagas">Número de Vagas: </string>
    <string name="tela_avaliacao_container_area">Área:</string>
    <string name="tela_avaliacao_container_coordenadas">Coordenadas: </string>
</resources>