<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/background_blob_scene_haikei"
    tools:context=".userInterface.telaAlterarDadosPerfil.TelaAlterarDadosPerfil">

    <TextView
        android:id="@+id/title_altera_dados_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="26dp"
        android:fontFamily="@font/jura"
        android:gravity="center"
        android:textFontWeight="700"
        android:textSize="28dp"
        android:text="@string/tela_alterar_dados_perfil_alterar_dados_do_seu_perfil"
        android:textColor="@color/primary"
        tools:ignore="SpUsage,UnusedAttribute" />

    <EditText
        android:id="@+id/alterar_dados_perfil_email_atual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="66dp"
        android:layout_marginTop="38dp"
        android:drawableLeft="@drawable/icon_email_alterar_senha"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:fontFamily="@font/jura"
        android:hint="@string/tela_alterar_dados_perfil_hint_email_atual"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textFontWeight="700"
        android:textSize="18dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,TextFields,UnusedAttribute" />

    <EditText
        android:id="@+id/alterar_dados_perfil_email_novo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="66dp"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/icon_email_alterar_senha"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:fontFamily="@font/jura"
        android:hint="@string/tela_alterar_dados_perfil_hint_novo_email"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textFontWeight="700"
        android:textSize="18dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,TextFields,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_atualizar_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jura"
        android:background="@drawable/button_border_radius"
        android:textColor="@color/primary_text2"
        android:clickable="true"
        android:text="@string/tela_alterar_dados_perfil_atualizar_email"
        android:textFontWeight="900"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/alterar_dados_perfil_senha_atual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="66dp"
        android:layout_marginTop="38dp"
        android:drawableStart="@drawable/icon_alterar_dados_senha"
        android:drawableEnd="@drawable/icon_eye_close"
        android:inputType="textPassword"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:fontFamily="@font/jura"
        android:hint="@string/tela_alterar_dados_perfil_hint_senha_atual"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textFontWeight="700"
        android:textSize="18dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,TextFields,UnusedAttribute" />

    <EditText
        android:id="@+id/alterar_dados_perfil_senha_novo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="66dp"
        android:layout_marginTop="26dp"
        android:drawableStart="@drawable/icon_alterar_dados_senha"
        android:drawableEnd="@drawable/icon_eye_close"
        android:inputType="textPassword"
        android:backgroundTint="@color/primary"
        android:ems="10"
        android:fontFamily="@font/jura"
        android:hint="@string/tela_alterar_dados_perfil_hint_nova_senha"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textFontWeight="700"
        android:textSize="18dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,TextFields,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_atualizar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/jura"
        android:background="@drawable/button_border_radius"
        android:textColor="@color/primary_text2"
        android:clickable="true"
        android:text="@string/tela_alterar_dados_perfil_atualizar_senha"
        android:textFontWeight="900"
        tools:ignore="UnusedAttribute" />

</LinearLayout>
