<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@drawable/background_faq_primary_color_1"
    tools:context=".userInterface.telaInfos.TelaInfos">

    <TextView
        android:id="@+id/title_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="56dp"
        android:fontFamily="@font/jura"
        android:gravity="center"
        android:textFontWeight="900"
        android:textSize="64dp"
        android:text="@string/tela_info_faq"
        android:textColor="@color/primary"
        tools:ignore="SpUsage,UnusedAttribute" />

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion1"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo1"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta1"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion2"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo2"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta2"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion3"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo3"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta3"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion4"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo4"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta4"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion5"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo5"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta5"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faq_accordion6"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        app:contentPadding="10dp"
        tools:ignore="TouchTargetSizeCheck">

        <LinearLayout
            android:id="@+id/faq_layout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faq_title6"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:drawableRight="@drawable/icon_arrowdowncirclefill"
                android:text="@string/tela_info_titulo6"
                android:textColor="@color/primary_text"
                android:textFontWeight="700"
                tools:ignore="RtlHardcoded,UnusedAttribute,UseCompatTextViewDrawableXml" />

            <TextView
                android:id="@+id/faq_desc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jura"
                android:text="@string/tela_info_resposta6"
                android:textColor="@color/primary_text"
                android:textFontWeight="300"
                android:textSize="12dp"
                android:visibility="gone"
                tools:ignore="SpUsage,UnusedAttribute" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        layout="@layout/tela_footer"
        />

</LinearLayout>

